--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Recipes",
   "start_url": "https://sara0112.github.io/Lab8-Starter/",
   "display": "standalone",
-  "background_color": "red",
-  "theme_color": "black",
+  "background_color": "black",
+  "theme_color": "white",
   "icons": [
     {
       "src": "assets/images/icons/icon-192x192.png", 
